[package]
name = "my_crate1"
version = "0.1.0"
edition = "2021"
# descriptionとlicenceは最低限必要らしい
description="my_crate1 my first rust crate"
license="MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# [[bin]]
# name="calc"
# path="./src/main.rs"